# up-bank-local-api

./: .env.example  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py
app/api/: __init__.py  router.py
app/api/routes/: accounts.py  categories.py  transactions.py
app/core/: __init__.py  config.py
app/models/: __init__.py  api_models.py  up_models.py
app/services/: __init__.py  up_api_service.py
app/utils/: __init__.py  helpers.py
