[project]
name = "up-bank-local-api"
version = "0.1.0"
description = "A local API wrapper for Up Bank REST API"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "httpx>=0.24.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0"
]
